# CodingPet

./: README.md  pyproject.toml
backend/app/: main.py  modelmanager.py
backend/app/api/: endpoints.py
backend/app/services/: chat_service.py
backend/tests/: test_endpoints.py
