[project]
name = "coding-pet"
version = "0.1.0"
description = "A digital coding companion API"
authors = [
    {name = "Priya Balakrishnan",email = "bpriya2001@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"

[tool.poetry]
package-mode = false
name = "coding-pet"
version = "0.1.0"
description = "A digital coding companion API"
authors = ["Priya Balakrishnan <bpriya2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = ">=0.23.1,<0.24.0"
python-dotenv = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
